\name{NEWS}
\title{News for Package 'NMOF'}
\section{Changes in NMOF version 0.19-1 (2011-09-29)}{
  \itemize{
    \item minor cleanups in documentation
    \item minor internal changes in 'restartOpt' (passing of the '...' arguments)
  }
}
\section{Changes in NMOF version 0.19-0 (2011-09-26)}{
  \itemize{
    \item 'bracketing', 'gridSearch' and 'restartOpt' now support distributed
      evaluation of 'fun' via 'clusterApply' from the 'snow' package. As a
      side effect, the interface of 'gridSearch' and 'restartOpt' has
      changed: instead of an option 'multicore', they now have an argument
      'method', which can be 'loop', 'multicore' or 'snow'. See the 
      documentation of these functions.
    \item for consistency, the 'method' argument of 'bracketing' expects 'vectorised' 
      rather than 'vectorise' (but both work, and also the '-ize' spellings) 
    \item substantial revision of documentation/examples
    \item more intelligible error/warning messages in 'bracketing' added
    \item small changes in vignettes 'Robust Regression with Particle Swarm
      Optimisation and Differential Evolution' and 'Repairing solutions'
    \item file 'multicore.R' was moved to subdirectory inst/unitTests;
      thus, it is installed with the package. Some tests for package 'snow'
      were added.
    \item more tests added (subdirectory unitTests); in particular, tests are
      more comprehensively commented now
  }
}
\section{Changes in NMOF version 0.18-1 (2011-09-21)}{
  \itemize{
    \item fixed: 'restartOpt' with 'multicore = TRUE' did not correctly
      pass '...' arguments to 'fun'
    \item fixed: typo in message issued by 'gridSearch'
    \item new file 'multicore.R' added in subdirectory tests; it contains a number
      of timing tests to see if the 'multicore' option works. (The tests are
      not run when the package is built.)
    \item minor updates in documentation
  }
}
\section{Changes in NMOF version 0.18-0 (2011-09-20)}{
  \itemize{